k6-test-main/ebay/ebay/ebay-policies/testing/2x/disallow-host-ports-14.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-policy-host-ports-dev-14
  annotations:
    policies.kyverno.io/title: Disallow hostPorts
    policies.kyverno.io/description: >-
      Access to host ports allows potential snooping of network traffic and should not be
      allowed, or at minimum restricted to a known list. This policy ensures the `hostPort`
      field is unset or set to `0`. 
spec:
  validationFailureAction: enforce
  background: false
  rules:
    - name: disallow-rule-host-ports-14
      exclude:
        any:
        - resources:
            kinds:
            - Pod
            selector:
              matchExpressions:
                - key: environment.tess.io/name
                  operator: In
                  values:
                  - dev
                  - feature
                  - lnp
                  - staging
                  - stagingpci
                  - stagingrnpci
                - key: application.tess.io/name
                  operator: In
                  values:
                  - tfap-lnp
      match:
        any:
        - resources:
            kinds:
              - Pod
            namespaces:
              - tfap-lnp
            selector:
              matchExpressions:
                - key: environment.tess.io/name
                  operator: In
                  values:
                  - dev
                  - feature
                  - lnp
                  - staging
                  - stagingpci
                  - stagingrnpci
      validate:
        message: >-
          Use of host ports is disallowed. The fields spec.containers[*].ports[*].hostPort
          , spec.initContainers[*].ports[*].hostPort, and spec.ephemeralContainers[*].ports[*].hostPort
          must either be unset or set to `0`.
        pattern:
          spec:
            =(ephemeralContainers):
              - =(ports):
                  - =(hostPort): 0
            =(initContainers):
              - =(ports):
                  - =(hostPort): 0
            containers:
              - =(ports):
                  - =(hostPort): 0
